# midi2usbhub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  home_screen.cpp  home_screen.h  main_lwipopts.h  midi2usbhub.cpp  midi2usbhub.h  midi2usbhub_cli.cpp  midi2usbhub_cli.h  pico_fatfs_cli.cpp  pico_fatfs_cli.h  pico_lfs_cli.cpp  pico_lfs_cli.h  pico_w_connection_manager_cli.cpp  pico_w_connection_manager_cli.h  preset_manager.cpp  preset_manager.h  preset_manager_cli.cpp  preset_manager_cli.h  ring_buffer_lib_config.h  tusb_config.h  wifi_manual_setup_view.cpp  wifi_manual_setup_view.h  wifi_scan_menu.cpp  wifi_scan_menu.h  wifi_setup_menu.cpp  wifi_setup_menu.h
ext_lib/: README.md
ext_lib/fatfs/source/: diskio.c  diskio.h  ffconf.h
fsdata/: makefsdata
fsdata/fs/: 400.html  404.html  429.html  index.html
fsdata/fs/css/: siimple.min.css  style.css
fsdata/fs/js/: ConnectedDevicesTable.js  MidiRoutingTable.js  PresetManager.js  StateManager.js  UserInputHandler.js
patches/: 0001-Fix-RP2040-Issue-1721.patch
